# Bouncer

./: .gitignore  Bouncer.i  CMakeLists.txt  README.md  main.xml
Bouncer/: CMakeLists.txt
Bouncer/include/Bouncer/: Configuration.hpp  Host.hpp  Main.hpp  Stats.hpp  User.hpp  UserStore.hpp  UserStoreContainer.hpp  UsersStore.hpp
Bouncer/migrations/: 20200513163000-initial.sql
Bouncer/src/: Main.cpp  TimeKeeper.cpp  TimeKeeper.hpp  UserStore.cpp  UsersStore.cpp
BouncerNet/: CMakeLists.txt
BouncerNet/Properties/: AssemblyInfo.cs
BouncerWpf/: App.config  App.xaml  App.xaml.cs  CMakeLists.txt  EventArgs.cs  ObservableStdVector.cs  Utilities.cs
BouncerWpf/Model/: Configuration.cs  Lights.cs  Main.cs  Message.cs  User.cs  UserNote.cs
BouncerWpf/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs  Settings.settings
BouncerWpf/View/: ChosenItemDataTemplateSelector.cs  Commands.cs  ConfigurationWindow.xaml  ConfigurationWindow.xaml.cs  ConfigureForbiddenWordsWindow.xaml  ConfigureForbiddenWordsWindow.xaml.cs  EditNoteWindow.xaml  EditNoteWindow.xaml.cs  FindDescendant.cs  LightsWindow.xaml  LightsWindow.xaml.cs  ListBoxExtensions.cs  MainWindow.xaml  MainWindow.xaml.cs  SortAdorner.cs  UserWindow.xaml  UserWindow.xaml.cs
